front end working. Can view all scraped jerb vacancies

--- a/react_frontend/src/App.css
+++ b/react_frontend/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.partners{
+  float: left;
+  padding: 100px;
+}
+
+.jerbs{
+  float: right;
+  padding: 100px;
+}
