--- a/react_frontend/src/App.css
+++ b/react_frontend/src/App.css
@@ -42,24 +42,98 @@
 
 
 
+
 .container {
   display: flex;
   flex-direction: row;
-  height: 120vh;
+  background-color: rgb(94, 94, 94);
+  color: white;
 }
 
 .partners{
-  flex: 2;
+  display: flex;
+  flex: 4;
   overflow-y: scroll;
-  justify-content: left;
+  justify-content: space-between;
   align-items: left;
-  padding: 10px 100px 10px 10px;
+  padding: 10px 10px 10px 30px;
+  height: 120vh;
+
 }
 
 .jerbs{
-  flex: 1;
   display: flex;
-  justify-content: right;
+  flex: 3;
+  overflow-y: scroll;
+  justify-content: space-between;
   align-items: right;
-  padding: 10px 10px 100px 10px;
+  padding: 10px 30px 10px 10px;
+  height: 120vh;
+}
+
+.no-blt{
+  list-style-type: none;
+}
+
+.btn-r{
+  float: right;
+}
+
+li{
+  margin: 3em 0;
+}
+
+a:link{
+  transition-duration: 0.4s;
+  text-decoration: none;
+  color: rgb(99, 172, 214);
+}
+
+a:visited{
+  color: rgb(96, 132, 209);
+  background-color: rgb(96, 132, 209);
+  text-shadow: 0px 0px 2px rgb(255, 255, 255);
+}
+
+a:hover{
+  color: white;
+}
+
+#button {
+  transition-duration: 0.4s;
+  border: none;
+  background-color: rgb(0, 153, 255);
+  color: white;
+  padding: 15px 32px;
+  margin: 0px 0px 0px 0px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 5px;
+}
+
+#button:hover {
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 0px 5px white;
+  color: rgb(0, 77, 128);
+  text-shadow: 0px 0px 1px black;
+}
+
+h1{
+  display: inline-block;
+}
+
+#counter {
+  border: none;
+  background-color: rgb(0, 153, 255);
+  color: white;
+  padding: 5px 12px;
+  margin: 0px 0px 0px 30px;
+  text-align: center;
+  display: inline-block;
+  border-radius: 5px;
+}
+
+.subtext{
+  color: rgb(185, 185, 185);
 }
