--- a/react_frontend/src/containers/PartnersContainer.css
+++ b/react_frontend/src/containers/PartnersContainer.css
@@ -1,4 +1,4 @@
-
+/* Table adjustments */
 .col-width{
     width: 200px;
 
@@ -14,4 +14,23 @@ table {
 
 thead {
     font-size: 24px;
+}
+
+
+/* styling for hovering over links and visited links */
+
+a:link{
+    transition-duration: 0.4s;
+    text-decoration: none;
+    color: rgb(99, 172, 214);
+}
+
+a:visited{
+    color: rgb(96, 132, 209);
+    background-color: rgb(96, 132, 209);
+    text-shadow: 0px 0px 2px rgb(255, 255, 255);
+}
+
+a:hover{
+    color: white;
 }
