--- a/react_frontend/src/containers/JobsContainer.css
+++ b/react_frontend/src/containers/JobsContainer.css
@@ -40,6 +40,12 @@
 }
 
 
+#button:visited{
+    background-color: rgb(105, 117, 145);
+    text-shadow: 0px 0px 2px rgb(255, 255, 255);
+    color: white;
+}
+
 .no-blt{
     list-style-type: none;
 }
@@ -47,6 +53,10 @@
 .btn-r{
     float: right;
 }
+
+
+
+
 
 li{
     margin: 3em 0;
