--- a/react_frontend/src/containers/JobsContainer.css
+++ b/react_frontend/src/containers/JobsContainer.css
@@ -62,7 +62,6 @@ li{
     margin: 3em 0;
 }
 
-/* .font-in{
-    font-family: Arial, Helvetica, sans-serif;
-    
-} */
+.font-in{
+    padding-left: 1em;
+}
