--- a/react_frontend/src/App.css
+++ b/react_frontend/src/App.css
@@ -3,8 +3,10 @@
   display: flex;
   flex-direction: row;
   background-color: rgb(94, 94, 94);
+  background-repeat: repeat;
   color: white;
   font-family: Jost;
+  height: 3000px;
 }
 
 .partners{
