--- a/react_frontend/src/containers/JobsContainer.css
+++ b/react_frontend/src/containers/JobsContainer.css
@@ -52,6 +52,7 @@
 
 .btn-r{
     float: right;
+
 }
 
 
@@ -60,6 +61,8 @@
 
 li{
     margin: 3em 0;
+    padding-right: 2em;
+    padding-left: 1em;
 }
 
 .title-in{
