--- a/react_frontend/src/containers/PartnersContainer.css
+++ b/react_frontend/src/containers/PartnersContainer.css
@@ -11,6 +11,7 @@
 
 table {
     border-spacing: 1em;
+    width: 100%;
 }
 
 thead {
@@ -34,4 +35,57 @@ a:visited{
 
 a:hover{
     color: white;
+}
+
+
+
+.title-in{
+    padding-left: 1em;
+}
+
+.table-pos{
+    padding-left: 2em;
+}
+
+
+
+
+@media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px)  {
+
+	/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr { 
+        display: block; 
+	}
+	
+	/* Hide table headers (but not display: none;, for accessibility) */
+	thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+	
+	/* tr { border: 1px solid #ccc; } */
+	
+	td { 
+		/* Behave  like a "row" */
+		border: none;
+		position: relative;
+		padding-left: 50%; 
+	}
+	
+	td:before { 
+		/* Now like a table header */
+		position: relative;
+		/* Top/left values mimic padding */
+		/* top: 6px;
+		left: 6px; */
+		width: 45%; 
+		padding-right: 1em; 
+        white-space: nowrap;
+    }
+
+    td:nth-of-type(1):before { content: "About"; }
+	td:nth-of-type(2):before { content: "Careers Page"; }
+	td:nth-of-type(3):before { content: "LinkedIn"; }
+	td:nth-of-type(4):before { content: "Open to Email"; }
 }
