--- a/react_frontend/src/App.css
+++ b/react_frontend/src/App.css
@@ -4,9 +4,10 @@
   flex-direction: row;
   background-color: rgb(94, 94, 94);
   background-repeat: repeat;
+
   color: white;
   font-family: Jost;
-  height: 30000px;
+  /* height: 3000000px; */
 }
 
 /* .partners{
